# python-k8s-base

./: .dockerignore  .editorconfig  .env.example  .gcloudignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  dev_mode.sh  devspace.yaml  docker-compose.yaml  main.py  pyproject.toml  run.sh
core/configs/: auth.py  core.py  cors.py  logging.py  sql.py
core/db/: sessions.py
core/endpoints/: auth.py  healths.py
core/loggers/: config.py
core/middlewares/https/: process_time.py  rate_limit.py
devspace/: .dockerignore  Dockerfile.devspace  create_test_pubsub.py  create_test_storage.py
devspace/scripts/: compose_test_emulators_connection.sh  create_cluster.sh  generate_secret.sh  run_test.sh
devspace/test/: datastore.py  pubsub.py  redis_test.py  storage.py  test_emulators_connection.py
docs/: devspace.md  howto_debug.txt  kubectl.md  minikube.md  tools_monitoring.txt  unittest.md
gcloud/: .dockerignore  .env.dev  Dockerfile  devspace.yaml
gcloud/k8s_dev/: emulators-deployment.yaml  emulators-service.yaml
k8s_dev/config/: postgresdb-configmap.yaml  redis-conf.yaml
k8s_dev/deployments/: app-deploy.yaml  postgresdb-deploy.yaml  redis-pod.yaml
k8s_dev/services/: app-service.yaml  postgresdb-service.yaml  redis-service.yaml
k8s_dev/volumes/: postgresdb-pv.yaml  postgresdb-pvc.yaml
migrations/: env.py  script.py.mako
src/: app.py  router.py  setting.py
src/heros/endpoints/: api.py  postgres.py
src/migrations/versions/: 8fad4222a2c9_initial.py
